Fixed: max-width in footer for better text wrapping

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -50,6 +50,7 @@ footer {
 
   .info {
     text-align: left;
+    max-width: 600px;
   }
 
   @include media-breakpoint-down(md) {
